--- a/Views/TeachingAssistant/_FilterRegistered.cshtml
+++ b/Views/TeachingAssistant/_FilterRegistered.cshtml
@@ -52,15 +52,7 @@
                             TK môn: @item.DiemTKMH
                         </td>
                         <td valign="middle" class="text-nowrap">
-                            @if (models.PhanCongTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idtk && f.ID_LopHocPhan == idlhp) != null)
-                            {
-                                <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-primary">Đã phân công</span>
-                            }
-                            else if (models.DanhGiaPhongVan.FirstOrDefault(f => f.ID_UngTuyenTroGiang == idut) != null)
-                            {
-                                <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-danger">Phỏng vấn trượt</span>
-                            }
-                            else if (!item.TrangThai)
+                            @if (!item.TrangThai)
                             {
                                 <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-warning">Chưa được duyệt</span>
                             }
