--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -116,6 +116,13 @@
                     </li>
 
                     <li class="nav-item">
+                        <a id="child-studentaffairs-studentaffairsstatisticals-index" class="nav-link child-nav-link " href="@Url.Action("index", "Statisticals")">
+                            <i class="nav-icon fe fe-bar-chart me-2"></i>
+                            Thống kê
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a id="parent-trogiang" class="nav-link  " href="#"
                            data-bs-toggle="collapse" data-bs-target="#nav-trogiang" aria-expanded="false"
                            aria-controls="nav-trogiang">
@@ -153,26 +160,26 @@
                     </li>
 
                     @*<li class="nav-item">
-                            <a id="child-task-index" class="nav-link child-nav-link " href="@Url.Action("index", "TaskList")">
-                                <span>
-                                    <svg xmlns="http://www.w3.org/2000/svg"
-                                         width="18"
-                                         height="18"
-                                         viewBox="0 0 24 24"
-                                         fill="none"
-                                         stroke="currentColor"
-                                         stroke-width="2"
-                                         stroke-linecap="round"
-                                         stroke-linejoin="round"
-                                         class="feather feather-trello">
-                                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-                                        <rect x="7" y="7" width="3" height="9"></rect>
-                                        <rect x="14" y="7" width="3" height="5"></rect>
-                                    </svg>
-                                </span>
-                                <span class="ms-2">Nhiệm vụ</span>
-                            </a>
-                        </li>*@
+            <a id="child-task-index" class="nav-link child-nav-link " href="@Url.Action("index", "TaskList")">
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                         width="18"
+                         height="18"
+                         viewBox="0 0 24 24"
+                         fill="none"
+                         stroke="currentColor"
+                         stroke-width="2"
+                         stroke-linecap="round"
+                         stroke-linejoin="round"
+                         class="feather feather-trello">
+                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                        <rect x="7" y="7" width="3" height="9"></rect>
+                        <rect x="14" y="7" width="3" height="5"></rect>
+                    </svg>
+                </span>
+                <span class="ms-2">Nhiệm vụ</span>
+            </a>
+        </li>*@
 
                     <li class="nav-item">
                         <a id="parent-studentaffairs-studentaffairstimetable" class="nav-link  " href="#"
