--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -108,7 +108,7 @@
                                     <th class="text-nowrap">Mã LHP</th>
                                     <th class="text-nowrap">Tên HP</th>
                                     <th class="text-nowrap">Lịch Học</th>
-                                    <th class="text-nowrap" data-bs-toggle="tooltip" data-bs-html="true" title="Trạng thái đăng ký đề xuất trợ giảng cho LHP">Trạng thái đề xuất</th>
+                                    <th class="text-nowrap" data-bs-toggle="tooltip" data-bs-html="true" title="Trạng thái đăng ký đề xuất trợ giảng cho LHP">Trạng thái</th>
                                     <th class="text-nowrap"></th>
                                 </tr>
                             </thead>
@@ -137,11 +137,11 @@
                                             {
                                                 if (item.DeXuatTroGiang.First().TrangThai)
                                                 {
-                                                    <span class="badge bg-success">Đã được duyệt</span>
+                                                    <span class="badge bg-success">Đã duyệt</span>
                                                 }
                                                 else
                                                 {
-                                                    <span class="badge bg-danger">Chưa được duyệt</span>
+                                                    <span class="badge bg-danger">Chưa duyệt</span>
                                                 }
                                             }
                                         </td>
