Add function thống kê và import danh sách sinh viên

--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -116,7 +116,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a id="child-studentaffairs-studentaffairsstatisticals-index" class="nav-link child-nav-link " href="@Url.Action("index", "Statisticals")">
+                        <a id="child-studentaffairs-studentaffairsstatisticals-index" class="nav-link child-nav-link " href="@Url.Action("Statistical", "Statisticals")">
                             <i class="nav-icon fe fe-bar-chart me-2"></i>
                             Thống kê
                         </a>
