--- a/Views/Assignment/Assgined.cshtml
+++ b/Views/Assignment/Assgined.cshtml
@@ -28,7 +28,7 @@
         }
     }
 
-    var lstTkb = models.LopHocPhan.Where(w => w.ID_HocKy == id_hkGanNhat && w.ID_Nganh == id_nganhCNTT && w.MaCBGD.ToLower().Equals(ma)).ToList();
+    var lstTkb = models.LopHocPhan.Where(w => w.ID_HocKy == id_hkGanNhat && w.ID_Nganh == id_nganhCNTT && w.MaCBGD.ToLower().Equals(ma) && w.DeXuatTroGiang.Where(wd => wd.TrangThai == true).Count() > 0).ToList();
 }
 <script src="~/ActiveItemMenu/TeachingAssistant/assigned.js"></script>
 <section class="container-fluid p-4">
