--- a/Views/Statisticals/_FilterStatistical.cshtml
+++ b/Views/Statisticals/_FilterStatistical.cshtml
@@ -10,7 +10,7 @@
                 <div class="card-body d-flex flex-column gap-2">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="lh-1 d-flex flex-column gap-1">
-                            <h2 class="h1 fw-bold mb-0">@ut.GroupBy(g => g.ID_TaiKhoan).Count()</h2>
+                            <h2 class="h1 fw-bold mb-0">@(ut.Count() > 0 ? ut.GroupBy(g => g.ID_TaiKhoan).Count() : 0)</h2>
                             <span>Đã Đăng Ký</span>
                         </div>
                         <div>
@@ -28,7 +28,7 @@
                 <div class="card-body d-flex flex-column gap-2">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="lh-1 d-flex flex-column gap-1">
-                            <h2 class="h1 fw-bold mb-0">@ut.Where(w => w.TrangThai == true).GroupBy(g => g.ID_TaiKhoan).Count()</h2>
+                            <h2 class="h1 fw-bold mb-0">@(ut.Where(w => w.TrangThai == true).Count() > 0 ? ut.Where(w => w.TrangThai == true).GroupBy(g => g.ID_TaiKhoan).Count() : 0)</h2>
                             <span>Được Duyệt</span>
                         </div>
                         <div>
@@ -46,7 +46,7 @@
                 <div class="card-body d-flex flex-column gap-2">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="lh-1 d-flex flex-column gap-1">
-                            <h2 class="h1 fw-bold mb-0">@ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList().GroupBy(g => g.ID_TaiKhoan).Count()</h2>
+                            <h2 class="h1 fw-bold mb-0">@(ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).Count() > 0 ?ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList().GroupBy(g => g.ID_TaiKhoan).Count() : 0)</h2>
                             <span>Đã Phân Công</span>
                         </div>
                         <div>
