--- a/Views/Statisticals/Statistical.cshtml
+++ b/Views/Statisticals/Statistical.cshtml
@@ -198,8 +198,8 @@
                                 <table id="dataTableBasic" class="table table-hover" style="width:100%">
                                     <thead class="table-light">
                                         <tr>
-                                            <th align="center" class="text-center" colspan="5">
-                                                Danh sách Trợ Giảng đã được phân công
+                                            <th align="center" class="text-center bg-white" colspan="5">
+                                                <h4>Danh sách Trợ Giảng đã được phân công</h4>
                                             </th>
                                         </tr>
                                         <tr>
